--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $cl-white: #fefefe;
 $cl-black: #0a0a0a;
 
 $cl-primary: #1A2534;
+$cl-primary-light: #3C5575;
 $cl-text: #F1E9D9;
 $cl-secondary: #FF5722;
 $cl-secondary-2: #BB4019;
@@ -23,11 +24,9 @@ $cl-gray: #706D6D;
 $cl-gray-dark: $cl-accent;
 $cl-gray-light: #c4c4c4;
 $cl-gray-xlight: #efefef;
-$cl-body-font-color: $cl-black;
-$cl-body-background: $cl-white;
 
-$cl-bglight: #673ab7;
-$cl-bgdark: #482895;
+
+
 
 
 
