--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -66,3 +66,10 @@
 // Motion UI
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
+
+
+@import 'global/base';
+@import 'global/typography';
+@import 'layouts/pagewrap';
+
+
