--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -66,7 +66,7 @@
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: rem-calc($layout-content);
 $global-lineheight: 1.4;
 $foundation-palette: (
   primary: #1779ba,
