--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -27,7 +27,14 @@ $cl-gray-xlight: #efefef;
 
 
 
+// Layout / Grid
+$layout-col-count: 12;
+$layout-col-width: 72px;
+$layout-gutter-width: 20px;
+$layout-content: ($layout-col-count * $layout-col-width) + (($layout-col-count - 1) * $layout-gutter-width);
+$layout-gutter-pct: percentage($layout-gutter-width / $layout-content);
 
+$global-width: $layout-content;
 
 
 
