--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,7 @@
 @charset 'utf-8';
 
 @import 'variables';
+@import 'global/mixins';
 @import 'settings';
 @import 'foundation';
 @import 'motion-ui';
@@ -8,7 +9,7 @@
 // Global styles
 @include foundation-global-styles;
 // @include foundation-forms;
-// @include foundation-typography;
+@include foundation-typography;
 
 // Grids (choose one)
 @include foundation-xy-grid-classes;
@@ -67,9 +68,10 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
-
 @import 'global/base';
 @import 'global/typography';
 @import 'layouts/pagewrap';
+@import 'components/hero';
+@import 'components/mpt';
 
 
