--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -73,5 +73,8 @@
 @import 'layouts/pagewrap';
 @import 'components/hero';
 @import 'components/mpt';
+@import 'components/postswiper';
+@import 'components/card';
+
 
 
