--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -75,6 +75,8 @@
 @import 'components/mpt';
 @import 'components/postswiper';
 @import 'components/card';
+@import 'components/siteheader';
+@import 'components/sitefooter';
 
 
 
