--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -7,6 +7,7 @@
     // flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+    overflow-x: hidden;
 
 
     @include breakpoint($bp-large) {
@@ -91,14 +92,14 @@
     // z-index: 0;
     text-align: center;
     @include breakpoint($bp-large) {
-        width:50vw;
+        // width:100%;
         height: 100%;
-        .wide & {
-            width:33vw;
-        }
-        .wide & {
-            width:25vw;
-        }
+        // .wide & {
+        //     width:33vw;
+        // }
+        // .wide & {
+        //     width:25vw;
+        // }
     }
 
     img {
@@ -140,6 +141,7 @@
     right:0;
     bottom:0;
     width:100%;
+    height: 50%;
     mask-image: linear-gradient(180deg, rgba(#000,0) 0, rgba(#000,.5) 100%);
     @include breakpoint($bp-large) {
         width:66.666%;
@@ -156,9 +158,10 @@
 
     img {
         width:100%;
+        object-fit: cover;
+        height: 100%;
         @include breakpoint($bp-large) {
-            object-fit: cover;
-            height: 100%;
+            
 
         }
     }
