--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -18,9 +18,12 @@
         <meta property="og:image" content="{{ogimage}}"/>
     </head>
 <body>
+{{> siteheader}}
 
 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
 {{> body}}
+
+{{> sitefooter}}
 
 <script src="{{root}}assets/js/app.js"></script>
 {{> iconsprite }}
