--- a/src/assets/scss/layouts/_pagewrap.scss
+++ b/src/assets/scss/layouts/_pagewrap.scss
@@ -2,7 +2,7 @@
 .pagewrap {
     position: relative;
     z-index: 1;
-    // overflow: hidden;
+    overflow: hidden;
     margin:0 auto;
     padding-left: 3%;
     padding-right: 3%;
