--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -68,15 +68,21 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+
+@import 'node_modules/slick-carousel/slick/slick.scss';
+@import 'node_modules/aos/src/sass/aos.scss';
+
 @import 'global/base';
 @import 'global/typography';
 @import 'layouts/pagewrap';
 @import 'components/hero';
 @import 'components/mpt';
-@import 'components/postswiper';
+@import 'components/cardswiper';
 @import 'components/card';
 @import 'components/siteheader';
 @import 'components/sitefooter';
+@import 'components/slick-theme';
+
 
 
 
