--- a/src/assets/scss/components/_siteheader.scss
+++ b/src/assets/scss/components/_siteheader.scss
@@ -1,5 +1,6 @@
 .siteheader {
     @extend .pagewrap;
+    overflow: visible;
     padding-top: 0;
     padding-bottom: 0;
     background-color: $cl-text;
