--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,6 +1,6 @@
 <header class="siteheader">
     <div class="siteheader__logo">
-        <a href="#"><img src="{{root}}assets/img/fecskelogomain.svg" alt="Fecske"></a>
+        <a href="{{root}}/"><img src="{{root}}assets/img/fecskelogo.svg" alt="Fecske"></a>
     </div>
     <nav class="siteheader__nav">
         <ul class="mainmenu">
@@ -13,7 +13,7 @@
                     <li><a href="#">Dolor Sit Péter</a></li>
                 </ul>
             </li>
-            <li><a href="#">Lorem ipsum</a></li>
+            <li><a href="{{root}}elements.html">Lorem ipsum</a></li>
         </ul>
     </nav>
 </header>
