--- a/src/assets/scss/layouts/_pagewrap.scss
+++ b/src/assets/scss/layouts/_pagewrap.scss
@@ -102,6 +102,14 @@
         background-image: url(../img/polka-dots.svg);
         background-size: 5px;
     }
+    &.megabg {
+        background-color: #ad3610;
+        background-image: url(../img/megafon.jpg);
+        background-size: 20rem auto;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-blend-mode:luminosity;
+    }
 }
 
 
