--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -10,15 +10,16 @@
     overflow-x: hidden;
 
 
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
         padding-bottom: 0;
         flex-direction: row;
         justify-content: space-between;
         align-items: stretch;
+        min-height: 35rem;
     }
 
     &.reverse {
-        @include breakpoint($bp-large) {
+        @include breakpoint($bp-tablet) {
             flex-direction: row-reverse;
         }
     }
@@ -28,7 +29,7 @@
 .mpt__content {
     @extend .bodycopy;
     width:100%;
-    margin: rem-calc($layout-gutter-width*2.5) 0 rem-calc($layout-gutter-width);
+    margin: rem-calc($layout-gutter-width*4) 0 rem-calc($layout-gutter-width*2);
     z-index: 1;
     .wide &, .xwide &, .full & {
         // font-size: 1.125rem;
@@ -37,9 +38,10 @@
         }
     }
 
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
         margin: rem-calc($layout-gutter-width*4) 0;
         width:47.5%;
+        align-self: center;
         .wide & {
             width:63%;
 
@@ -66,12 +68,13 @@
 }
 
 .mpt__media {
-    width:100%;
+    width:100vw;
+    // margin-left:-6.4%;
     .reverse & {
         direction: rtl;
     }
 
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
        width:47.5%;
        .wide & {
             width:32%;
@@ -84,7 +87,7 @@
 
         }
     }
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
     }
 }
 
@@ -92,7 +95,7 @@
     position: relative;
     // z-index: 0;
     text-align: center;
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
         // width:100%;
         height: 100%;
         // .wide & {
@@ -108,7 +111,7 @@
         // height: 100%;
         // max-width: none;
         // object-fit: cover;
-        @include breakpoint($bp-large) {
+        @include breakpoint($bp-tablet) {
             position: absolute;
             left:0;
             top:50%;
@@ -144,7 +147,7 @@
     width:100%;
     height: 50%;
     mask-image: linear-gradient(180deg, rgba(#000,0) 0, rgba(#000,.5) 100%);
-    @include breakpoint($bp-large) {
+    @include breakpoint($bp-tablet) {
         width:66.666%;
         height:100%;
         mask-image: linear-gradient(90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
@@ -161,7 +164,7 @@
         width:100%;
         object-fit: cover;
         height: 100%;
-        @include breakpoint($bp-large) {
+        @include breakpoint($bp-tablet) {
             
 
         }
