--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -79,6 +79,7 @@
 @import 'components/mpt';
 @import 'components/cardswiper';
 @import 'components/card';
+@import 'components/tcard';
 @import 'components/siteheader';
 @import 'components/sitefooter';
 @import 'components/slick-theme';
