--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -100,3 +100,10 @@ img {
 .cc-link {
     display: inline;
 }
+
+.responsive-embed {
+    box-shadow: 0 0 4rem 0 rgba(#000,.85);
+    margin:0;
+    background-color: #000;
+    // border: 10px solid red;
+}
