--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,6 +1,6 @@
 <header class="siteheader">
     <div class="siteheader__logo">
-        <a href="{{root}}/"><img src="{{root}}assets/img/fecskelogo.svg" alt="Fecske"></a>
+        <a href="{{root}}/"><svg class="icon"><use xlink:href="#icon-fecskelogo"></use></svg></a>
     </div>
     <nav class="siteheader__nav">
         <ul class="mainmenu">
