--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -7,12 +7,13 @@
 
 .hero__content {
     @extend .pagewrap;
-    margin-bottom:10%;
+    max-width:  #{$global-width*0.875};
+    // margin-bottom:5%;
 }
 .hero__title {
     font-family: $fontornament;
     font-weight: $fw-bold;
-    font-size: calc(1.875rem + 5vw);
+    font-size: calc(2rem + 5vw);
     letter-spacing: 0.07em;
     margin:0;
     span {
