--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -1,8 +1,9 @@
 .mpt {
     @extend .pagewrap;
+    border-bottom:1px solid rgba(#fff, .05);
     padding-top:0;
+    padding-bottom: 0;
     position: relative;
-    padding-bottom: rem-calc($layout-gutter-width*2.5);
     display: flex;
     // flex-wrap: wrap;
     flex-direction: column;
@@ -11,7 +12,6 @@
 
 
     @include breakpoint($bp-tablet) {
-        padding-bottom: 0;
         flex-direction: row;
         justify-content: space-between;
         align-items: stretch;
@@ -29,8 +29,9 @@
 .mpt__content {
     @extend .bodycopy;
     width:100%;
-    margin: rem-calc($layout-gutter-width*4) 0 rem-calc($layout-gutter-width*2);
+    margin: rem-calc($layout-gutter-width*4) 0;
     z-index: 1;
+    // order: 2;
     .wide &, .xwide &, .full & {
         // font-size: 1.125rem;
         @include breakpoint($bp-large) {
@@ -38,8 +39,10 @@
         }
     }
 
+
     @include breakpoint($bp-tablet) {
-        margin: rem-calc($layout-gutter-width*4) 0;
+        // order: initial;
+        margin: rem-calc($layout-gutter-width*5) 0;
         width:47.5%;
         align-self: center;
         .wide & {
@@ -140,14 +143,17 @@
 }
 
 .mpt__bg {
-    position: absolute;
+    // position: absolute;
     z-index: -1;
     right:0;
-    bottom:0;
-    width:100%;
-    height: 50%;
-    mask-image: linear-gradient(180deg, rgba(#000,0) 0, rgba(#000,.5) 100%);
+    top:0;
+    width:100vw;
+    height: 56.25vw;
+    mask-image: linear-gradient(0deg, rgba(#000,0) 0, rgba(#000,.5) 50%);
+    order:-1;
+    margin-bottom: rem-calc($layout-gutter-width*-8);
     @include breakpoint($bp-tablet) {
+        position: absolute;
         width:66.666%;
         height:100%;
         mask-image: linear-gradient(90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
