--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -8,9 +8,9 @@
             <li>
                 <a href="#">Történetek</a>
                 <ul>
-                    <li><a href="#">Lorem Irén</a></li>
-                    <li><a href="#">Ipsum Béla</a></li>
-                    <li><a href="#">Dolor Sit Péter</a></li>
+                    <li><a href="{{root}}/story.html">Lorem Irén</a></li>
+                    <li><a href="{{root}}/story.html">Ipsum Béla</a></li>
+                    <li><a href="{{root}}/story.html">Dolor Sit Péter</a></li>
                 </ul>
             </li>
             <li><a href="{{root}}elements.html">Lorem ipsum</a></li>
