--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,19 +1,19 @@
-<header class="siteheader">
+<header class="siteheader" >
     <div class="siteheader__logo">
         <a href="{{root}}/"><svg class="icon"><use xlink:href="#icon-fecskelogo"></use></svg></a>
     </div>
     <nav class="siteheader__nav">
-        <ul class="mainmenu">
-            <li><a href="#">Rólunk</a></li>
+        <ul class="mainmenu" data-magellan>
+            <li><a href="{{root}}/#project">Távol a család</a></li>
             <li>
-                <a href="#">Történetek</a>
+                <a href="{{root}}/#stories" class="dropdown">Történetek</a>
                 <ul>
                     <li><a href="{{root}}/story.html">Lorem Irén</a></li>
-                    <li><a href="{{root}}/story.html">Ipsum Béla</a></li>
+                    <li><a href="{{root}}/story2.html">Ipsum Ágnes</a></li>
                     <li><a href="{{root}}/story.html">Dolor Sit Péter</a></li>
                 </ul>
             </li>
-            <li><a href="{{root}}elements.html">Lorem ipsum</a></li>
+            <li><a href="{{root}}/#aboutus">Rólunk</a></li>            
         </ul>
     </nav>
 </header>
