--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -143,39 +143,67 @@
 }
 
 .mpt__bg {
-    // position: absolute;
+    position: relative;
     z-index: -1;
     right:0;
     top:0;
     width:100vw;
     height: 56.25vw;
-    mask-image: linear-gradient(0deg, rgba(#000,0) 0, rgba(#000,.5) 50%);
+    // mask-image: linear-gradient(0deg, rgba(#000,0) 0, rgba(#000,.5) 50%);
     order:-1;
     margin-bottom: rem-calc($layout-gutter-width*-8);
     @include breakpoint($bp-tablet) {
         position: absolute;
         width:66.666%;
         height:100%;
-        mask-image: linear-gradient(90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
+        // mask-image: linear-gradient(90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
 
         .reverse & {
             right:auto;
             left:0;
             width:50%;
-            mask-image: linear-gradient(-90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
+            // mask-image: linear-gradient(-90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
         }
     }
 
     img {
+        mask-image: linear-gradient(0deg, rgba(#000,0) 0, rgba(#000,.5) 50%);
         width:100%;
         object-fit: cover;
         height: 100%;
         @include breakpoint($bp-tablet) {
-            
-
+            mask-image: linear-gradient(90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
+            .reverse & {
+                mask-image: linear-gradient(-90deg, rgba(#000,0) 0, rgba(#000,1) 66.666%);
+            }
         }
     }
 
+}
+
+.mpt__bg__play {
+    filter: drop-shadow(0 0 0.025em rgba(#000,.25));
+    color: $cl-text;
+    font-size: calc(4rem + 2.5vw);
+    position: absolute;
+    z-index: 1;
+    left:50%;
+    top:50%;
+    transform: translateX(-50%) translateY(-50%);
+    outline: none;
+    @include breakpoint($bp-tablet) {
+        left:57%;
+    }
+    
+    &:hover{
+        color: $cl-secondary;
+    }
+
+    .reverse & {
+        @include breakpoint($bp-tablet) {
+            left:43%;
+        }
+    }
 }
 
 .mpt__kicker {
