--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,7 +4,8 @@ $siteheader-height: 2.5rem;
 
 $fontheading: 'Bebas Neue', cursive;
 $fontbody: 'Lato', sans-serif;
-$fontornament: 'Amatic SC', cursive;
+//$fontornament: 'Slabo 13px', serif;
+$fontornament: 'Nixie One', cursive;
 $fw-bold: 700;
 $fw-normal: 400;
 
