--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="{{root}}assets/css/app.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bebas+Neue&family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bebas+Neue&family=Slabo+13px&family=Nixie+One&family=Lato:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <link rel="icon" href="{{root}}assets/img/favicon/favicon.ico">
         <link rel="icon" href="{{root}}assets/img/favicon/favicon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="{{root}}assets/img/favicon/apple-touch-icon.png">
