--- a/src/partials/sitefooter.html
+++ b/src/partials/sitefooter.html
@@ -1,6 +1,6 @@
 <header class="sitefooter">
     <div class="sitefooter__logo">
-        <a href="#"><img src="{{root}}assets/img/fecskelogob.svg" alt="Fecske"></a>
+        <a href="#"><img src="{{root}}assets/img/fecskelogo-w.svg" alt="Fecske"></a>
     </div>
     <div class="sitefooter__center">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, error doloribus architecto nemo eum cum, facilis numquam ducimus nulla animi rerum soluta dolorum laboriosam delectus consequatur nihil vitae voluptatum? Pariatur.</p>
