--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -1,10 +1,10 @@
 <header class="siteheader" >
     <div class="siteheader__logo">
-        <a href="{{root}}/"><svg class="icon"><use xlink:href="#icon-fecskelogo"></use></svg></a>
+        <a href="https://fogvatartas.hu/"><svg class="icon"><use xlink:href="#icon-fecskelogo-text"></use></svg></a>
     </div>
     <nav class="siteheader__nav">
         <ul class="mainmenu" data-magellan>
-            <li><a href="{{root}}/#project">Távol a család</a></li>
+            <li><a href="{{root}}/">Távol a család</a></li>
             <li>
                 <a href="{{root}}/#stories" class="dropdown">Történetek</a>
                 <ul>
