oswald plus lato local hosted font added

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,9 +3,9 @@ $fontsizebase: 14px;
 $siteheader-height: 2.5rem;
 
 $fontheading: 'Bebas Neue', cursive;
-$fontbody: 'Lato', sans-serif;
-//$fontornament: 'Slabo 13px', serif;
-$fontornament: 'Nixie One', cursive;
+$fontsubheading: 'Oswald', sans-serif;
+$fontbody: 'LatoLatinWeb', sans-serif;
+$fontornament: 'Slabo 13px', serif;
 $fw-bold: 700;
 $fw-normal: 400;
 
