--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -72,6 +72,7 @@
 @import 'node_modules/slick-carousel/slick/slick.scss';
 @import 'node_modules/aos/src/sass/aos.scss';
 
+@import 'global/fonts';
 @import 'global/base';
 @import 'global/typography';
 @import 'layouts/pagewrap';
