--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -12,7 +12,7 @@
     display: flex;
     color: $cl-text;
     background-color: $cl-primary;
-    background-image: url(../img/polka-dots.svg), url(../img/content/esteotthon.jpg);
+    background-image: url(../img/polka-dots.svg), url(../img/content/oleles.jpg);
     background-size: 5px, cover;
     background-repeat: repeat, no-repeat;
     background-position: center;
