--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -62,10 +62,16 @@
 
 .mpt__content {
     h1, h2, h3 {
+        font-family: $fontsubheading;
+        letter-spacing: normal;
+        font-weight: normal;
         font-size: 2.25em;
     }
 
     h4,h5,h6 {
+        font-family: $fontsubheading;
+        letter-spacing: normal;
+        font-weight: normal;
         font-size: 1.5em;
     }
 }
