--- a/src/assets/scss/layouts/_pagewrap.scss
+++ b/src/assets/scss/layouts/_pagewrap.scss
@@ -139,6 +139,9 @@
 
 .narrowwrap__floatingtitle {
     color: $cl-secondary;
+    font-family: $fontsubheading;
+    font-weight: normal;
+    letter-spacing: normal;
 
     @include breakpoint($bp-xxlarge) {
         position: absolute;
