--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -8,7 +8,7 @@
             <li>
                 <a href="{{root}}/#stories" class="dropdown">Történetek</a>
                 <ul>
-                    <li><a href="{{root}}/story.html">Lorem Irén</a></li>
+                    <li><a href="{{root}}/etelka.html">Etelka története</a></li>
                     <li><a href="{{root}}/story2.html">Ipsum Ágnes</a></li>
                     <li><a href="{{root}}/story.html">Dolor Sit Péter</a></li>
                 </ul>
