--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -14,7 +14,7 @@
     margin-bottom:5%;
 }
 .hero__title {
-    font-family: $fontornament;
+    font-family: $fontheading;
     font-weight: $fw-normal;
     font-size: calc(1.25rem + 4vw);
     text-shadow: 0 0 .25em rgba(#000,.85);
