--- a/src/assets/scss/components/_mpt.scss
+++ b/src/assets/scss/components/_mpt.scss
@@ -1,6 +1,5 @@
 .mpt {
     @extend .pagewrap;
-    border-bottom:1px solid rgba(#fff, .05);
     padding-top:0;
     padding-bottom: 0;
     position: relative;
@@ -73,6 +72,51 @@
         letter-spacing: normal;
         font-weight: normal;
         font-size: 1.5em;
+    }
+
+    &.indented {
+        h1, h2, h3 {
+            margin-bottom:1.75rem;
+            &:after {
+                // background-color: green;;
+                content:'';
+                display: block;
+                width:6.2rem;
+                height:.75rem;
+                background-image: svg-load('fivehbullets.svg', fill=$cl-secondary);
+                background-repeat: no-repeat;
+                background-position: left center;
+                background-size: 100% auto;
+                margin:1rem 0 0;
+            }
+            &.b1:after {
+                background-position: left -5.4rem center;
+            }
+            &.b2:after {
+                background-position: left -3.937rem center;
+            }
+            &.b3:after {
+                background-position: left -2.5666rem center;
+            }
+            &.b4:after {
+                background-position: left -1.125rem center;
+            }
+        }
+        p {
+            padding-left: 8.75%;
+            padding-right: 8.75%;
+            font-size: 1.25rem;
+            
+            &:last-child {
+                text-align: center;
+                margin-top:1.75em;
+                margin-bottom: 0;
+
+            }
+        }
+        .button {
+            font-size: 1.125em;
+        }
     }
 }
 
@@ -235,3 +279,16 @@
 }
 
 
+.mptlist {
+    > .mpt:not(:last-child) {
+        @include breakpoint($bp-tablet) {
+            margin-bottom:8rem;
+        }
+        
+        // border-bottom:1px solid rgba(#fff, .05);
+    }
+    
+    @include breakpoint($bp-tablet) {
+        margin-bottom:8rem;
+    }
+}
