--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -5,7 +5,7 @@ $siteheader-height: 2.5rem;
 $fontheading: 'Bebas Neue', cursive;
 $fontsubheading: 'Oswald', sans-serif;
 $fontbody: 'LatoLatinWeb', sans-serif;
-$fontornament: 'Slabo 13px', serif;
+$fontornament: monospace;
 $fw-bold: 700;
 $fw-normal: 400;
 
