--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -9,16 +9,17 @@
 }
 
 .hero__content {
-    // @extend .narrowwrap;
+    @extend .narrowwrap;
     flex-basis: 100%;
     margin-bottom:5%;
 }
 .hero__title {
-    font-family: $fontheading;
-    font-weight: $fw-normal;
-    font-size: calc(1.25rem + 4vw);
+    font-family: $fontornament;
+    font-weight: 100;
+    font-size: calc(1.5rem + 4vw);
     text-shadow: 0 0 .25em rgba(#000,.85);
-    // letter-spacing: -0.02em;
+    letter-spacing: -0.02em;
+    // letter-spacing: normal;
     margin:0;
     span {
         color: $cl-secondary;
@@ -36,7 +37,5 @@
     height: 100%;
     object-fit: cover;
     object-position: center 120%;
-    // mix-blend-mode: luminosity;
-    
-
+    mix-blend-mode: luminosity;
 }
