--- a/src/assets/scss/components/_siteheader.scss
+++ b/src/assets/scss/components/_siteheader.scss
@@ -74,6 +74,10 @@
 
         ul {
             display: block;
+            // font-family: $fontsubheading;
+            // font-weight: $fw-normal;
+            // letter-spacing: normal;
+            // text-transform: none;
             opacity: 0;
             visibility: hidden;
             position: absolute;
