--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -8,9 +8,10 @@
             <li>
                 <a href="{{root}}/#stories" class="dropdown">Történetek</a>
                 <ul>
+                    <li><a href="{{root}}/andrea.html">Andrea története</a></li>
+                    <li><a href="{{root}}/tunde.html">Tünde története</a></li>
+                    <li><a href="{{root}}/luca.html">Luca története</a></li>
                     <li><a href="{{root}}/etelka.html">Etelka története</a></li>
-                    <li><a href="{{root}}/story2.html">Ipsum Ágnes</a></li>
-                    <li><a href="{{root}}/story.html">Dolor Sit Péter</a></li>
                 </ul>
             </li>
             <li><a href="{{root}}/#aboutus">Rólunk</a></li>            
