--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -21,10 +21,18 @@
 
 .lettermodal__inner {
     @extend .pagewrap;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    
     max-height: 100%;
     overflow: auto;
     margin-top: auto;
     margin-bottom: auto;
+
+    @include breakpoint($bp-large) {
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+    }
 
 }
 
