--- a/src/assets/scss/components/_tcard.scss
+++ b/src/assets/scss/components/_tcard.scss
@@ -30,14 +30,15 @@
     margin:auto auto;
     font-size: 1.5rem;
     text-align: center;
-    // min-height: 2.5em;
-    text-transform: uppercase;
+    // font-family: $fontsubheading;
+    // letter-spacing: normal;
+    // font-weight: $fw-normal;
+
     a {
         text-decoration: none;
         &:hover, &:focus {
             text-decoration: underline;
-            // color: $cl-primary;
-            // color:$white;
+
         }
     }
 
