--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -2,21 +2,7 @@
 
 <!doctype html>
 <html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{title}}</title>
-        <link rel="stylesheet" href="{{root}}assets/css/app.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Bebas+Neue&family=Oswald:wght@400;700&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">        <link rel="icon" href="{{root}}assets/img/favicon/favicon.ico">
-        <link rel="icon" href="{{root}}assets/img/favicon/favicon.svg" type="image/svg+xml">
-        <link rel="apple-touch-icon" href="{{root}}assets/img/favicon/apple-touch-icon.png">
-        <meta name="description" content="{{desc}}">
-        <meta property="og:image" content="{{ogimage}}"/>
-    </head>
+    {{> head}}
 <body>
 {{> siteheader}}
 
