--- a/src/partials/sitefooter.html
+++ b/src/partials/sitefooter.html
@@ -1,8 +1,10 @@
 <header class="sitefooter">
+    <div class="sitefooter__copy">
+        <p>&copy; <a href="https://www.fogvatartas.hu">Fogvatartás.hu</a> | Készült 2022-ben. | <a href="https://www.fogvatartas.hu/wp-content/uploads/2021/07/FECSKE-GDPR.docx.pdf">Adatvédelmi tájékoztató</a><br>A weboldal létrejöttét a Német Szövetségi Külügyminisztérium támogatta.
+        </p>
+    </div>
     <div class="sitefooter__logo">
-        <a href="#"><img src="{{root}}assets/img/fecskelogo-w.svg" alt="Fecske"></a>
+        <img src="{{root}}assets/img/amt.svg" alt="AMT"><img src="{{root}}assets/img/humanrights.svg" alt="Human Rights">
     </div>
-    <div class="sitefooter__center">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, error doloribus architecto nemo eum cum, facilis numquam ducimus nulla animi rerum soluta dolorum laboriosam delectus consequatur nihil vitae voluptatum? Pariatur.</p>
-    </div>
+
 </header>
