--- a/src/partials/siteheader.html
+++ b/src/partials/siteheader.html
@@ -4,9 +4,9 @@
     </div>
     <nav class="siteheader__nav">
         <ul class="mainmenu" data-magellan>
-            <li><a href="{{root}}/">Távol a család</a></li>
+            <li><a href="{{root}}/">Otthon várunk</a></li>
             <li>
-                <a href="{{root}}/#stories" class="dropdown">Történetek</a>
+                <a href="{{root}}/#stories" class="dropdown">Személyes történetek</a>
                 <ul>
                     <li><a href="{{root}}/andrea.html">Andrea története</a></li>
                     <li><a href="{{root}}/tunde.html">Tünde története</a></li>
@@ -14,7 +14,7 @@
                     <li><a href="{{root}}/etelka.html">Etelka története</a></li>
                 </ul>
             </li>
-            <li><a href="{{root}}/#aboutus">Rólunk</a></li>            
+            <li><a href="{{root}}/#aboutus">Mi az a FECSKE?</a></li>            
         </ul>
     </nav>
 </header>
