--- a/src/assets/scss/components/_modals.scss
+++ b/src/assets/scss/components/_modals.scss
@@ -7,6 +7,7 @@
     @include reveal-modal-base;
     padding:0;
     @include reveal-modal-fullscreen;
+    top:0 !important;
   
     position: fixed;
     display: flex;
