--- a/src/assets/scss/components/_siteheader.scss
+++ b/src/assets/scss/components/_siteheader.scss
@@ -60,10 +60,9 @@
     font-family: $fontheading;
     font-weight: $fw-bold;
     font-size: 1.0875rem;
-    line-height: 1.2;
     letter-spacing: 0.02em;
     text-transform: uppercase;
-    @include breakpoint($bp-medium) {
+    @include breakpoint($bp-tablet) {
         font-size: 1.5rem;
     }
     ul {
@@ -71,6 +70,7 @@
         list-style: none;
         margin:0;
         padding: 0;
+        line-height: 1.2;
 
         ul {
             display: block;
@@ -145,7 +145,7 @@
         li {
             font-size: .875em;
             a {
-                padding:.125em .5em;
+                padding:.25em .5em;
                 color: $cl-secondary;
                 &:hover, &:focus {
                     color: $cl-primary;
