--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -13,4 +13,5 @@
         <link rel="apple-touch-icon" href="{{root}}assets/img/favicon/apple-touch-icon.png">
         <meta name="description" content="{{desc}}">
         <meta property="og:image" content="{{ogimage}}"/>
+        <meta name="robots" content="noindex, nofollow">
     </head>
